crates/doodle-core/tests/snapshots/broken_syntax__03_unclosed_string.snap
---
source: crates/doodle-core/tests/broken_syntax.rs
expression: "render_diagnostics(&diagnostics, &view)"
---
error[unterminated-string]: this string is never closed
  --> 03-unclosed-string.doodle:2:8
2 |   show("hello)
  |        ^^^^^^^

error[syntax-error]: expected `)` to close this call
  --> 03-unclosed-string.doodle:2:7
2 |   show("hello)
  |       ^
